// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VLazy.ts should conditionally render content 1`] = `
<div class="v-lazy">
</div>
`;

exports[`VLazy.ts should conditionally render content 2`] = `
<div class="v-lazy">
  <div>
    foobar
  </div>
</div>
`;
